More fixes. Alignments.

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ div#song-time-visualization div.amplitude-song-time-visualization-status{
 }
 
 div#song-time-visualization-large{
-    width: 290px;
+    width: 304px;
     height: 5px;
     background-color: #bebebe;
     display: inline-block;
